<resources>
  <string name="app_name">QuesTv</string>
  <string name="login">Login</string>
  <string name="questv">QuesTV</string>
  <string name="username_error">Invalid Username</string>
  <string name="password_error">Invalid Password</string>
  <string name="seriesname">seriesName</string>
  <string name="series_search">Series search</string>
  <string name="user_account">User account</string>
  <string name="user_fragment">User Fragment</string>
  <string name="profile">Profile</string>
  <string name="switch_account">Switch Account</string>
  <string name="settings">Settings</string>
  <string name="help_amp_feedback"><![CDATA[Help & Feedback]]></string>
  <string name="close_user_account_options">Close user account options</string>
  <string name="category_name">Category name</string>
  <string name="series_name">Series name</string>
  <string name="black_gradient">Black gratient</string>
  <string name="splash_screen">Splash Screen</string>
  <string name="series">Series</string>
  <string name="none"/>
  <string name="question_description">Question description</string>
  <string name="left_question">lef question</string>
  <string name="right_question">Right question</string>
  <string name="answer">Answer</string>
  <string name="_8">8</string>
  <string name="answer_number_circle">Answer number circle</string>
  <string name="gradient_background">gradient background</string>
  <string name="comedy">Comedy</string>
  <string name="the_big_bang_theory">The Big Bang Theory</string>
  <string name="play_background">play background</string>
  <string name="play_series_questions">play series questions</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="questv_logo">Questv logo</string>
  <string name="first_name">First Name</string>
  <string name="last_name">Last Name</string>
  <string name="quiz_contribution">Quiz contribution</string>
</resources>
