<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

  <ImageView
      android:layout_width="0dp"
      android:layout_height="200dp" app:srcCompat="@drawable/gradient_background_dark"
      android:id="@+id/imageView5"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      android:contentDescription="@string/question_description" app:layout_constraintTop_toTopOf="parent"/>
  <android.support.v4.view.ViewPager
      android:layout_width="0dp"
      android:layout_height="0dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
      android:id="@+id/vp_question_swapper"/>
  <ImageButton
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" app:srcCompat="@drawable/ic_keyboard_arrow_right_black_24dp"
      android:id="@+id/ib_next_question"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:background="@null"
      android:contentDescription="@string/right_question"
      android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
      app:layout_constraintBottom_toBottomOf="@+id/imageView5"/>
  <ImageButton
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" app:srcCompat="@drawable/ic_keyboard_arrow_left_black_24dp"
      android:id="@+id/ib_previous_question"
      app:layout_constraintStart_toStartOf="parent"
      android:background="@null" android:contentDescription="@string/left_question"
      android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
      app:layout_constraintBottom_toBottomOf="@+id/imageView5"/>
</android.support.constraint.ConstraintLayout>