<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@android:color/background_light">

  <ImageButton
      android:background="@null"

      android:layout_width="wrap_content"
      android:layout_height="wrap_content" app:srcCompat="@drawable/ic_close_black_24dp"
      android:id="@+id/ib_close_user_acc_fragment" android:layout_marginTop="16dp"
      app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
      android:layout_marginLeft="16dp" android:layout_marginStart="16dp" tools:ignore="VectorDrawableCompat"/>
  <View
      android:id="@+id/divider"
      android:elevation="5dp"
      android:layout_width="395dp"
      android:layout_height="1dp"
      android:background="?android:attr/listDivider"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginTop="16dp"
      app:layout_constraintTop_toBottomOf="@+id/ib_close_user_acc_fragment"/>
  <TextView
      android:text="@string/profile"
      android:drawableStart="@drawable/ic_account_box_black_24dp"
      android:drawableLeft="@drawable/ic_account_box_black_24dp"
      android:drawablePadding="8dp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/tv_user_profile_opt" android:layout_marginTop="32dp"
      app:layout_constraintTop_toBottomOf="@+id/divider"
      app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp" android:layout_marginStart="32dp"
      android:textSize="18sp"/>

  <TextView
      android:text="@string/switch_account"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:drawableStart="@drawable/ic_supervisor_account_black_24dp"
      android:drawableLeft="@drawable/ic_supervisor_account_black_24dp"
      android:drawablePadding="8dp"
      android:id="@+id/tv_switch_acc_opt"
      app:layout_constraintTop_toBottomOf="@+id/tv_user_profile_opt" app:layout_constraintStart_toStartOf="parent"
      android:layout_marginTop="24dp"
      android:layout_marginLeft="32dp"
      android:layout_marginStart="32dp" android:textSize="18sp"/>


  <TextView
      android:text="@string/settings"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:drawableStart="@drawable/ic_settings_black_24dp"
      android:drawableLeft="@drawable/ic_settings_black_24dp"
      android:drawablePadding="8dp"
      android:id="@+id/tv_acc_settings_opt"
      app:layout_constraintTop_toBottomOf="@+id/tv_switch_acc_opt" app:layout_constraintStart_toStartOf="parent"
      android:layout_marginTop="24dp"
      android:layout_marginLeft="32dp"
      android:layout_marginStart="32dp" android:textSize="18sp"/>

  <TextView
      android:text="@string/help_amp_feedback"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:drawableStart="@drawable/ic_help_black_24dp"
      android:drawableLeft="@drawable/ic_help_black_24dp"
      android:drawablePadding="8dp"
      android:id="@+id/tv_help_opt"
      app:layout_constraintTop_toBottomOf="@+id/tv_acc_settings_opt" app:layout_constraintStart_toStartOf="parent"
      android:layout_marginTop="24dp"
      android:layout_marginLeft="32dp"
      android:layout_marginStart="32dp" android:textSize="18sp"/>

</android.support.constraint.ConstraintLayout>