<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content" android:background="@color/colorGray">

  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" app:srcCompat="@drawable/ic_panorama_fish_eye_black_24dp"
      android:id="@+id/imageView4" android:layout_marginTop="8dp"
      app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
      android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
      app:layout_constraintBottom_toBottomOf="parent" android:contentDescription="@string/answer_number_circle"/>
  <TextView
      android:text="@string/_8"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/tv_answer_item_number" app:layout_constraintTop_toTopOf="@+id/imageView4"
      app:layout_constraintBottom_toBottomOf="@+id/imageView4" app:layout_constraintStart_toStartOf="@+id/imageView4"
      app:layout_constraintEnd_toEndOf="@+id/imageView4" android:textSize="12sp" android:textColor="@color/colorWhite"
      android:textStyle="bold"/>
  <TextView
      android:text="@string/answer"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/tv_question_answer_item" android:layout_marginTop="16dp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toEndOf="@+id/imageView4" android:layout_marginLeft="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
      android:textColor="@color/colorWhite" android:textSize="18sp" android:textStyle="italic"
      android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"/>
  <View
      android:id="@+id/divider4"
      android:layout_width="0dp"
      android:layout_height="1dp"
      android:background="?android:attr/listDivider"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
      android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
      app:layout_constraintTop_toBottomOf="@+id/tv_question_answer_item"/>
</android.support.constraint.ConstraintLayout>