<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/colorGray">

  <ImageView
      android:src="@drawable/tbbt_slide"
      android:layout_width="0dp"
      android:layout_height="200dp"
      android:id="@+id/iv_series_details_promo2" app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
      android:cropToPadding="false" android:scaleType="centerCrop" app:layout_constraintVertical_bias="0.0"/>
  <RatingBar
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/rb_series_details_rating"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginEnd="8dp"
      android:layout_marginRight="8dp"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
      app:layout_constraintHorizontal_bias="0.037" android:rating="4.5"
      style="@android:style/Widget.Material.RatingBar.Indicator"
      app:layout_constraintTop_toBottomOf="@+id/iv_series_details_promo_gradient"
      tools:ignore="NewApi"/>
  <View
      android:id="@+id/divider2"
      android:layout_width="395dp"
      android:layout_height="1dp"
      android:background="?android:attr/listDivider"
      app:layout_constraintBottom_toTopOf="@+id/rv_series_seasons_details" android:layout_marginStart="8dp"
      app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
      app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
  <ProgressBar
      style="?android:attr/progressBarStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/pb_season_recycler"
      android:visibility="gone"
      app:layout_constraintTop_toBottomOf="@+id/rb_series_details_rating" android:layout_marginBottom="8dp"
      app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
      android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:indeterminate="true"
      android:layout_marginTop="8dp"/>
  <androidx.recyclerview.widget.RecyclerView
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:id="@+id/rv_series_seasons_details"
      android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/rb_series_details_rating"/>
  <ImageView
      android:src="@drawable/gradient_background_dark"
      android:layout_width="0dp"
      android:layout_height="200dp"
      android:id="@+id/iv_series_details_promo_gradient"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintVertical_bias="0.0" android:contentDescription="@string/gradient_background"/>
  <TextView
      android:text="@string/comedy"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/tv_series_details_category"
      app:layout_constraintTop_toTopOf="@+id/iv_series_details_promo_gradient" android:layout_marginBottom="8dp"
      app:layout_constraintBottom_toBottomOf="@+id/iv_series_details_promo_gradient"
      app:layout_constraintEnd_toEndOf="@+id/iv_series_details_promo_gradient"
      app:layout_constraintStart_toStartOf="@+id/iv_series_details_promo_gradient" android:layout_marginLeft="8dp"
      android:layout_marginStart="8dp" android:textSize="16sp" android:textColor="@color/colorAccent"
      app:layout_constraintVertical_bias="1.0" app:layout_constraintHorizontal_bias="0.0"/>
  <TextView
      android:text="@string/the_big_bang_theory"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/tv_series_details_name"
      android:textSize="30sp"
      app:fontFamily="@font/amaranth" android:textColor="@android:color/background_light"
      app:layout_constraintStart_toStartOf="@+id/iv_series_details_promo_gradient" android:layout_marginEnd="8dp"
      app:layout_constraintEnd_toEndOf="@+id/iv_series_details_promo_gradient" android:layout_marginRight="8dp"
      app:layout_constraintBottom_toTopOf="@+id/tv_series_details_category"
      app:layout_constraintHorizontal_bias="0.0" android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
  <ImageView
      app:srcCompat="@drawable/ic_fiber_manual_record_black_24dp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/imageView2" app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintBottom_toBottomOf="@+id/iv_series_details_promo_gradient"
      app:layout_constraintTop_toTopOf="@+id/iv_series_details_promo_gradient"
      android:contentDescription="@string/play_background"/>
  <ImageButton
      app:srcCompat="@drawable/ic_videogame_asset_black_56dp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/ib_play_series_questions"
      android:background="@null"
      app:layout_constraintTop_toTopOf="@+id/iv_series_details_promo_gradient"
      app:layout_constraintBottom_toBottomOf="@+id/iv_series_details_promo_gradient"
      app:layout_constraintEnd_toEndOf="@+id/iv_series_details_promo_gradient"
      app:layout_constraintStart_toStartOf="@+id/iv_series_details_promo_gradient"
      android:contentDescription="@string/play_series_questions"/>
</androidx.constraintlayout.widget.ConstraintLayout>
    
    
  